0.03
 - Fix to 80 characters on line.
 - Sort attributes.

0.02 2016-02-20T23:43:25+01:00
 - Add -e option for input encoding.

0.01 2016-02-17T11:13:38+01:00
 - First version.